
Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.

2008-Feb-18 UPDATE Igor Plyatov <plyatov@mail.ru>
================================================================================
+eeschema
    Added menu View with all possible elements from the top toolbar.
    Find item added in to the Edit menu.
+all
    Translated part of IDs to english.

2008-Feb-15 UPDATE Igor Plyatov <plyatov@mail.ru>
================================================================================
+eeschema
    Added item "Delete" in "Edit" menu.
    Added menu "Place" with all possible elements from the right toolbar.

2008-Feb-13 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
    specctra export: now generate unique pin names from module padnames in the
    case where there are non-unique pad names within a module.  Tested with
    Electra demo, and *.dsn files load OK in there as well as in freerouter.
    Stopped using reserved layer name "signal" and instead output a full
    padstack consisting of all pertinent layers for via, pads, and keepouts.


2008-Feb-12 UPDATE   Tim Hanson sideskate@gmail.com
================================================================================
+eeschema
    * commiting my changes to allow multiple instances of a given schematic file within a hierarchy:
    ** internally, m_currentScreen has been replaced with m_currentSheet,
        which is a list or 'path' of screens.  The path of screens is used to generate
        a series of timestamps, which is converted to flat component reference via a look-up
        table in the schematic files.
    ** this means that m_currentScreen is no longer used -- use GetScreen().
    ** GetScreen is virtual, as some of the dialogs keep around a WinEDA_BaseScreen pointer.