@@ -5,6 +5,13 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with
 email address.
 
+2008-Feb-18 UPDATE Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
+================================================================================
++eeschema
+	Fixed bug in gen bill of material (dialog_build_BOM.cpp):
+	eeschema crashed when created a B.O.M. (i think: unicode version only)
+
+
 2008-Feb-18 UPDATE Igor Plyatov <plyatov@mail.ru>
 ================================================================================
 +eeschema
